--- a/app/homeapp/static/homeapp/styles/main.less
+++ b/app/homeapp/static/homeapp/styles/main.less
@@ -65,6 +65,9 @@
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/form-contact";
+@import "blocks/reviews-feed";
+@import "blocks/slider-nav";
+@import "blocks/good-place";
 
 
 /* Pages */
@@ -73,3 +76,7 @@
 @import "pages/page-section";
 @import "pages/news";
 @import "pages/cases";
+@import "pages/reviews";
+@import "pages/practices";
+@import "pages/pricing-packages";
+@import "pages/page-404";
