--- a/app/homeapp/templates/homeapp/tariffs.html
+++ b/app/homeapp/templates/homeapp/tariffs.html
@@ -6,22 +6,22 @@
   <div class="container">
     <div class="page-section">
       <div class="pricing-header">
-        <h1 class="page-section__title">Тарифы на абонентское сопровождение</h1>
-        <p class="text-center pt-3">Выберите подходящий для вас пакет юридического обслуживания</p>
+        <h1 class="title title_h2">Тарифы на абонентское сопровождение</h1>
+        <p>Выберите подходящий для вас пакет юридического обслуживания</p>
       </div>
 
       <div class="pricing-packages row justify-content-center pt-3">
         <!-- Базовый пакет -->
         <div class="col-xl-4 col-md-6 mb-xl-0 mb-5">
           <div class="pricing-card card tarif">
-            <h3 class="text-center card-title card-header mb-3">БАЗОВЫЙ ПАКЕТ</h3>
+            <h3 class="text-center card-title card-header mb-3">Базовый пакет</h3>
             <div class="card-body">
               <ul class="list pricing-list">
                 <li>Дистанционное консультирование по возникшим правовым вопросам (5 часов);</li>
                 <li>Разовый срочный выезд для участия в проверке либо следственных действиях;</li>
               </ul>
               <div class="filling"></div>
-              <p class="m-0 text-center fs-6">50 000 рублей в месяц</p>
+              <p class="m-0 fs-6">50 000 рублей в месяц</p>
             </div>
           </div>
         </div>
@@ -29,7 +29,7 @@
         <!-- Продвинутый пакет -->
         <div class="col-xl-4 col-md-6 mb-xl-0 mb-5">
           <div class="pricing-card card tarif">
-            <h3 class="text-center card-title card-header mb-3">ПРОДВИНУТЫЙ ПАКЕТ</h3>
+            <h3 class="text-center card-title card-header mb-3">Продвинутый пакет</h3>
             <div class="card-body">
               <ul class="list pricing-list">
                 <li>Дистанционное консультирование по возникшим правовым вопросам (10 часов), в том числе подготовка
@@ -41,7 +41,7 @@
                   заседании арбитражного суда в месяц;</li>
               </ul>
               <div class="filling"></div>
-              <p class="m-0 text-center fs-6">100 000 рублей в месяц</p>
+              <p class="m-0 fs-6">100 000 рублей в месяц</p>
             </div>
           </div>
         </div>
@@ -49,7 +49,7 @@
         <!-- Премиальный пакет -->
         <div class="col-xl-4 col-md-6 mb-xl-0 mb-5">
           <div class="pricing-card card tarif">
-            <h3 class="text-center mb-3 card-title card-header">ПРЕМИАЛЬНЫЙ ПАКЕТ</h3>
+            <h3 class="text-center mb-3 card-title card-header">Премиальный пакет</h3>
             <div class="card-body">
               <ul class="list pricing-list">
                 <li>Дистанционное консультирование по возникшим правовым вопросам (15 часов), в том числе подготовка
@@ -62,7 +62,7 @@
                 <li>Обслуживание клиентов в VIP офисе коллегии;</li>
               </ul>
               <div class="filling"></div>
-              <p class="m-0 text-center fs-6">150 000 рублей в месяц</p>
+              <p class="m-0 fs-6">150 000 рублей в месяц</p>
             </div>
           </div>
         </div>
