--- a/app/homeapp/static/homeapp/styles/old-styles.less
+++ b/app/homeapp/static/homeapp/styles/old-styles.less
@@ -291,11 +291,6 @@
   gap: 10px;
 }
 
-.nav-item {
-  margin-right: 5px;
-  margin-left: 5px;
-}
-
 .dropdown-menu-search {
   min-width: 400px;
 }
@@ -407,6 +402,15 @@
   color: #2a3554;
   padding: 16px 24px;
   transition: all .3s;
+}
+
+.modal {
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
 }
 
 @media (hover:hover) {
@@ -584,7 +588,7 @@
 }
 
 .tarif .card-header {
-  min-height: 100px;
+  min-height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
