--- a/app/homeapp/templates/homeapp/services/service_list.html
+++ b/app/homeapp/templates/homeapp/services/service_list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container py-4">
-  <h1 class="page-section__title">{{ title }}</h1>
+  <h1 class="title title_h2">{{ title }}</h1>
 
   {% if categories %}
     {% for category in categories %}
