--- a/app/staticfiles/homeapp/styles/main.less
+++ b/app/staticfiles/homeapp/styles/main.less
@@ -43,14 +43,40 @@
 
 
 /* Default */
-@import "vars";
+@import "old-styles";
 @import "typography";
+@import "base";
 
 
 /* Blocks */
+@import "blocks/header";
+@import "blocks/button";
 @import "blocks/advantages";
 @import "blocks/cta";
 @import "blocks/accordion";
+@import "blocks/video";
+@import "blocks/hero";
+@import "blocks/features";
+@import "blocks/aboniment";
+@import "blocks/news-feed";
+@import "blocks/about";
+@import "blocks/team-slider";
+@import "blocks/clients";
+@import "blocks/footer";
+@import "blocks/modal";
+@import "blocks/form-contact";
+@import "blocks/reviews-feed";
+@import "blocks/slider-nav";
+@import "blocks/good-place";
 
 
 /* Pages */
+@import "pages/service-list";
+@import "pages/service";
+@import "pages/page-section";
+@import "pages/news";
+@import "pages/cases";
+@import "pages/reviews";
+@import "pages/practices";
+@import "pages/pricing-packages";
+@import "pages/page-404";
