--- a/app/homeapp/static/homeapp/styles/main.css
+++ b/app/homeapp/static/homeapp/styles/main.css
@@ -1139,6 +1139,35 @@ nav img {
 .cta-area__button {
   margin-top: 32px;
 }
+.team-banner {
+  margin-bottom: 10px;
+  position: relative;
+}
+.team-banner::before {
+  content: '';
+  display: block;
+  width: calc(100% - 40px);
+  height: calc(100% - 40px);
+  border: 4px solid rgba(255, 255, 255, 0.8);
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 1;
+}
+.team-banner__image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+@media only screen and (max-width: 767px) {
+  .team-banner::before {
+    display: none;
+  }
+  .team-banner__image {
+    aspect-ratio: 1/0.54;
+    object-fit: cover;
+  }
+}
 .accordion-collapse {
   color: white;
 }
@@ -1542,6 +1571,7 @@ nav img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  background: #fff;
 }
 .footer {
   margin-top: 60px;
