--- a/app/staticfiles/homeapp/styles/main.less
+++ b/app/staticfiles/homeapp/styles/main.less
@@ -53,6 +53,7 @@
 @import "blocks/button";
 @import "blocks/advantages";
 @import "blocks/cta";
+@import "blocks/team-banner";
 @import "blocks/accordion";
 @import "blocks/video";
 @import "blocks/hero";
