--- a/app/staticfiles/homeapp/styles/main.less
+++ b/app/staticfiles/homeapp/styles/main.less
@@ -1,4 +1,4 @@
-// compress: false, sourceMap: true
+// compress: true, sourceMap: false
 @font-face {
   font-family: "Cormorant Garamond";
   src: url("../fonts/CormorantGaramond-Regular.ttf") format("truetype");
