стили для детальной услуг

--- a/app/homeapp/templates/homeapp/service_blocks/quote.html
+++ b/app/homeapp/templates/homeapp/service_blocks/quote.html
@@ -1,3 +1,7 @@
 <blockquote class="blockquote">
+  <svg class="blockquote__icon" width="46" height="46" fill="#EAF1FF" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M9.135 9h3L10 14.607H7L9.135 9Z"></path>
+    <path d="M14.135 9h3L15 14.607h-3L14.135 9Z"></path>
+  </svg>
   <p class="mb-0">{{ block.text }}</p>
 </blockquote>
