--- a/app/homeapp/templates/homeapp/base.html
+++ b/app/homeapp/templates/homeapp/base.html
@@ -101,7 +101,7 @@
           </button>
           <button class="header__burger js-headerBurger">
             <span>
-              <img src="{% static 'homeapp/img/sort.svg' %}" alt="Бургер иконка">
+              <img src="{% static 'homeapp/img/Sort.svg' %}" alt="Бургер иконка">
             </span>
           </button>
         </div>
